<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ml_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chat_rtc_background">

    <LinearLayout
        android:id="@+id/ll_hangup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ll_accept"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_hangup"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/icon_rtc_hangup" />

        <TextView
            android:id="@+id/tv_hangup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/rtc_action_hangup"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_mic_mute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ll_hangup"
        app:layout_constraintTop_toTopOf="@+id/ll_hangup">

        <ImageView
            android:id="@+id/iv_mic_mute"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/icon_rtc_mute" />

        <TextView
            android:id="@+id/tv_mic_mute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/rtc_action_mic_mute"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_hands_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44.5dp"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ll_hangup">

        <ImageView
            android:id="@+id/iv_hands_free"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/icon_rtc_hands_free" />

        <TextView
            android:id="@+id/tv_hands_free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/rtc_action_hands_free"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ll_hangup"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/iv_accept"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/icon_rtc_accept" />

        <TextView
            android:id="@+id/tv_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/rtc_action_accept"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_audio_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.fzm.chat.biz.widget.ChatAvatarView
            android:id="@+id/audio_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@mipmap/default_avatar_round" />

        <TextView
            android:id="@+id/audio_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="备注/昵称" />

        <TextView
            android:id="@+id/audio_contact_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            tools:text="正在等待对方接受邀请…" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="@android:color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/ll_hangup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textColor="@android:color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tv_time"
        app:layout_constraintEnd_toEndOf="@+id/tv_time"
        app:layout_constraintStart_toStartOf="@+id/tv_time"
        tools:text="你的网络不佳"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:paddingHorizontal="18dp"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="invisible"
        app:bl_corners_radius="5dp"
        app:bl_solid_color="#E6262B31"
        app:layout_constraintBottom_toTopOf="@+id/tv_info"
        app:layout_constraintEnd_toEndOf="@+id/tv_info"
        app:layout_constraintStart_toStartOf="@+id/tv_info"
        tools:ignore="MissingPrefix"
        tools:text="已接通"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>